# picomenu

./: Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: build_and_test.yml  publish.yml
src/: lib.rs
tests/: menu.rs
