[package]
name = "picomenu"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "No-std + async library to build very simple menus"
repository = "https://github.com/Low-Noise-Factory/picomenu"
readme = "README.md"
keywords = ["menu", "serial", "usb", "embassy", "pico"]
categories = ["command-line-interface", "asynchronous", "embedded", "no-std", "no-std::no-alloc"]

[[test]]
name = "menu"

[dependencies]
defmt = "1.0"
ufmt = "0.2"

[dev-dependencies]
tokio = { version = "1.45", features = ["rt", "macros"] }
